docs: Update Docs Swagger
